--- a/portfolio/Leon/sass/_media.sass
+++ b/portfolio/Leon/sass/_media.sass
@@ -84,6 +84,7 @@
 		display: table
 		overflow: hidden
 		width: 250px
+		color: #fff
 	.wrapper-screen__hidden-two
 		display: table
 		overflow: hidden
