--- a/Leon/sass/_media.sass
+++ b/Leon/sass/_media.sass
@@ -26,6 +26,7 @@
 		padding-right: 4%
 		width: 100%
 		overflow: visible
+		background-image: none
 	.wrapper-screen .container-fluid
 		height: auto
 		width: 100%
@@ -130,6 +131,8 @@
 		margin-left: 22px
 		margin-top: 15px
 		position: relative
+	.wrapper-screen
+		background-image: none
 	.two-button
 		margin-left: 0
 	.fixed
