--- a/Leon/sass/main.sass
+++ b/Leon/sass/main.sass
@@ -35,13 +35,16 @@ button:focus
 	height: 100%
 	top: 0px
 	width: 15.7%
-	background-color: #171a2c
+	background-color: rgba(23, 26, 44, 0.8)
 .wrapper-screen 
 	width: 100%
 	background-color: #22284b
 	height: 100vh
 	padding-left: 21%
 	overflow: hidden
+	background-image: url(../img/base-bg.jpg)
+	background-repeat: no-repeat
+	background-size: cover
 .nav__header-ul-menu
 	list-style: none
 	padding: 0
@@ -392,6 +395,10 @@ body .more-information .more-information__text
 	font-family: 'roboto-example'
 	font-size: 14px
 	margin-top: 5px
+.shadow-block__description-speciality
+	color: #f3f6fc
+	font-family: 'roboto-example'
+	font-size: 6px
 .shadow-block__icon-fb
 	background-repeat: no-repeat
 	background-image: url(../img/sprite.png)
@@ -1073,6 +1080,9 @@ label.error
 	height: 40px
 	margin-top: 15px
 	font-size: 15px
+	cursor: pointer
+	&:hover
+		background-color: #c28211
 .grafic-title-block
 	color: #f3f6fc
 	font-family: 'GothamPro-Bold'
