--- a/Leon/sass/main.sass
+++ b/Leon/sass/main.sass
@@ -1090,4 +1090,16 @@ label.error
 	padding-left: 18px
 	position: relative
 	top: -5px
+.shadow-block__get-name-smm a
+	color: inherit
+.grafic-block ul li
+	color: #fff
+	line-height: 1.2
+	padding-top: 8px
+	font-size: 15px
+.shadow-block__description-person
+	font-family: 'roboto-example'
+	font-size: 14px
+	color: #fff
+	margin-top: 5px
 @import "media" // Always at the end
