--- a/Leon/sass/main.sass
+++ b/Leon/sass/main.sass
@@ -444,10 +444,9 @@ body .more-information .more-information__text
 	margin-right: 18px
 .my-contacts__M
 	width: 35px
-	height: 29px
-	background-image: url(../img/sprite.png)
+	height: 30px
+	background-image: url(../img/fb.png)
 	background-repeat: no-repeat
-	background-position: -7px -997px
 	float: left
 	margin-right: 18px
 .my-contacts__bit
@@ -775,6 +774,7 @@ body .more-information .more-information__text
 	background-color: #1d2139
 	height: 100vh
 	position: relative
+	padding-right: 10px
 .grafic-block__text
 	font-family: 'GothamPro-Bold'
 	font-size: 20px
@@ -1092,14 +1092,49 @@ label.error
 	top: -5px
 .shadow-block__get-name-smm a
 	color: inherit
+.grafic-block ul
+	list-style: none
+	padding-left: 18px
 .grafic-block ul li
 	color: #fff
 	line-height: 1.2
 	padding-top: 8px
 	font-size: 15px
+	position: relative
 .shadow-block__description-person
 	font-family: 'roboto-example'
 	font-size: 14px
 	color: #fff
 	margin-top: 5px
+.wrapper-img-in-shadow-1
+	height: 180px
+	width: 180px
+	overflow: hidden
+	background-image: url(../img/evgeny.jpg)
+	background-repeat: no-repeat
+.wrapper-img-in-shadow-2
+	height: 180px
+	width: 180px
+	overflow: hidden
+	background-image: url(../img/anna.jpg)
+	background-repeat: no-repeat
+.wrapper-img-in-shadow-3
+	height: 180px
+	width: 180px
+	overflow: hidden
+	background-image: url(../img/roman.jpg)
+	background-repeat: no-repeat
+.line-before-li
+	height: 2px
+	width: 10px
+	position: absolute
+	top: 17px
+	left: -17px
+	background-color: #fff
+.grafic-block-active .line-before-li
+	background-color: #e9a227
+.grafic-block-active .grafic-block__line
+	background-color: #e9a227
+.grafic-block-active .grafic-block__text
+	color: #e9a227
 @import "media" // Always at the end
