--- a/css/main.css
+++ b/css/main.css
@@ -268,29 +268,11 @@ body {
     color: #2A3A3F
 }
 
-.gunmetal {
-    color: #524e4d
-}
-
-.gray {
-    color: #93a4aa
-}
-
 .yellow {
     font-size: 5rem;
     color: #FDCD3B
 }
 
-.white {
-    color: #fff
-}
-
-.divider {
-    width: 60px;
-    height: 4px;
-    background-color: #FDCD3B;
-    margin: 32px auto
-}
 
 h1,
 h2,
@@ -314,7 +296,7 @@ p.intro {
 @media screen and (min-width: 750px) {
     p.intro {
         font-size: 3.2rem;
-        margin: 10rem 0 2.0rem
+        margin: 7rem 0 2.0rem
     }
 }
 
@@ -336,14 +318,9 @@ a {
     border-bottom: 1px dotted #5EA4F7
 }
 
-a:hover {
-    color: #4288DC;
-    border-bottom: 1px dotted #4288DC
-}
 
-a.button:hover {
-    border: 2px solid #444
-}
+
+
 
 section {
     padding: 0 0 50px
@@ -367,93 +344,12 @@ section {
     }
 }
 
-.navbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    background-color: transparent;
-    z-index: 99
-}
-
-.navbar a.logo img {
-    float: left;
-    display: block;
-    position: relative;
-    width: 60px;
-    height: auto;
-    margin-top: 20px
-}
-
-.navbar nav.navigation {
-    float: right;
-    margin-top: 3px;
-    display: block;
-    padding: 0;
-    background: none
-}
-
-.navbar nav>ul {
-    list-style: none
-}
-
-.navbar nav>ul>li {
-    font-family: 'Montserrat', sans-serif;
-    float: left;
-    margin: 30px 0 20px
-}
-
-.navbar nav>ul>li>a.nav-link {
-    display: block;
-    text-decoration: none;
-    float: left;
-    padding: 10px 20px;
-    color: rgba(255, 255, 255, 0.7);
-    font-size: 13px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1px
-}
-
-.navbar nav>ul>li>a.button {
-    margin-left: 10px;
-    color: rgba(255, 255, 255, 0.7);
-    background-color: transparent;
-    border: 2px solid rgba(255, 255, 255, 0.7)
-}
-
-.navbar nav>ul>li>a.button:hover {
-    border-color: #fff;
-    color: #fff
-}
-
-.navbar nav>ul>li>a:hover {
-    color: #fff
-}
-
 footer {
     background-color: #2A3A3F;
     color: #fff;
     text-align: center
 }
 
-footer a,
-footer a:hover {
-    border-bottom: none
-}
-
-footer a.logo {
-    position: relative;
-    background-image: url(../images/logomark.png);
-    background-size: 100%;
-    display: inline-block;
-    width: 34px;
-    height: 34px;
-    text-indent: -99999px;
-    margin: 0 auto;
-    border-radius: 3px
-}
 
 @media screen and (min-width: 750px) {
     footer a.logo {
@@ -492,18 +388,6 @@ footer .text-write-me {
     background-repeat: no-repeat
 }
 
-#halfscreen-hero {
-    position: relative;
-    min-height: 350px;
-    height: 70vh;
-    width: 100%;
-    overflow: hidden;
-    text-align: center;
-    background-color: #2A3A3F;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat
-}
 
 #fullscreen-hero:before,
 #fullscreen-hero:after {
@@ -513,13 +397,6 @@ footer .text-write-me {
     width: 100%
 }
 
-#halfscreen-hero:before,
-#halfscreen-hero:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    width: 100%
-}
 
 .home-hero {
     position: relative;
@@ -818,185 +695,6 @@ footer .text-write-me {
     font-size: 5.0rem
 }
 
-#work {
-    background-color: #eee
-}
-
-#work .container {
-    max-width: 960px
-}
-
-#work p.statement {
-    margin-bottom: 0
-}
-
-#work .six.columns {
-    margin-left: 0
-}
-
-.project-showcase {
-    position: relative;
-    overflow: hidden;
-    border-bottom: 1px solid #d6e1e5;
-    padding: 50px 0 0
-}
-
-.project-showcase .project-content {
-    text-align: center;
-    margin: 2.0em 0
-}
-
-.project-showcase img.project-image {
-    position: relative;
-    width: 100%
-}
-
-.project-showcase .project-content .project-title {
-    font-size: 1.45em;
-    font-weight: 700;
-    margin-bottom: 0px
-}
-
-.project-showcase .project-content .project-description {
-    margin: 15px 0 28px 0;
-    line-height: 1.6;
-    font-size: 1.4rem
-}
-
-.project-showcase .project-content .project-tags {
-    color: #b2c6cd;
-    font-size: 1.1rem;
-    font-weight: 700;
-    letter-spacing: 1px;
-    opacity: 1;
-    text-transform: uppercase
-}
-
-.project-showcase .project-content .project-tags:before {
-    content: "\2022";
-    margin-right: 4px;
-    color: #FDCD3B;
-    font-size: 1.8rem
-}
-
-.project-showcase .project-content .project-tags li {
-    display: inline
-}
-
-.project-showcase .project-content .project-tags li:last-child:after {
-    content: ""
-}
-
-.project-showcase .project-content .project-tags li:after {
-    content: ","
-}
-
-.project-showcase a.button {
-    margin: 10px 0 20px
-}
-
-@media screen and (min-width: 750px) {
-    .project-showcase {
-        padding: 80px 0 20px
-    }
-}
-
-@media screen and (min-width: 550px) {
-    .project-showcase .project-content {
-        text-align: left
-    }
-}
-
-@media screen and (min-width: 750px) {
-    .project-showcase .project-content {
-        margin: 0
-    }
-}
-
-@media screen and (min-width: 750px) {
-    .project-showcase .project-content.text-left {
-        padding-right: 7.0rem
-    }
-    .project-showcase .project-content.text-right {
-        padding-left: 7.0rem
-    }
-}
-
-@media screen and (min-width: 1000px) {
-    .project-showcase .project-content .project-title {
-        font-size: 2.8rem
-    }
-}
-
-@media screen and (min-width: 750px) {
-    .project-showcase a.button {
-        margin: 10px 0 60px
-    }
-}
-
-.project-testimonial {
-    text-align: center;
-    padding: 3.0em 0;
-    border-bottom: solid 1px #d6e1e5
-}
-
-.project-testimonial:last-child {
-    border-bottom: 0
-}
-
-.project-testimonial blockquote {
-    font-size: 1.6rem;
-    line-height: 1.4;
-    max-width: 30em;
-    margin: 0 auto 1.2em
-}
-
-@media screen and (min-width: 750px) {
-    .project-testimonial {
-        padding: 4.0em 0
-    }
-}
-
-@media screen and (min-width: 550px) {
-    .project-testimonial blockquote {
-        font-size: 2.1rem
-    }
-}
-
-.project-testimonial-avatar {
-    display: inline-block;
-    border-radius: 50%;
-    background: #eeeeee;
-    height: 50px;
-    overflow: hidden;
-    width: 50px;
-    vertical-align: middle;
-    margin-bottom: 10px
-}
-
-.project-testimonial-avatar img {
-    width: 100%
-}
-
-@media screen and (min-width: 750px) {
-    .project-testimonial-avatar {
-        height: 70px;
-        width: 70px
-    }
-}
-
-@media screen and (min-width: 550px) {
-    .project-testimonial-avatar {
-        margin-bottom: 0
-    }
-}
-
-.project-testimonial-name {
-    color: #93a4aa;
-    display: inline-block;
-    font-size: 1em;
-    margin-left: 0.6em
-}
 
 #wip {
     background: #fff;
@@ -1028,28 +726,6 @@ footer .text-write-me {
     margin: 2.0rem 0 0
 }
 
-#sub-footer {
-    background-color: #FDCD3B;
-    text-align: center;
-    margin: 0 auto
-}
-
-#sub-footer a.cd-modal-close {
-    border-bottom: none
-}
-
-#sub-footer a.button {
-    margin: 2.4rem 0 0;
-    padding: 1.6rem 3.6rem
-}
-
-#sub-footer a.button:hover {
-    padding: 1.6rem 4.4rem
-}
-
-#sub-footer a.btn {
-    margin: 2.4rem 0 0
-}
 
 .button,
 button {
@@ -1064,7 +740,8 @@ button {
     letter-spacing: 0;
     border-radius: 50px;
     border: 2px solid #999;
-    color: #999
+    color: #999;
+    cursor: pointer;
 }
 
 input[type="submit"],
@@ -1082,14 +759,6 @@ input[type="button"] {
     border-radius: 50px;
     border: 2px solid #999;
     color: #999
-}
-
-.button:hover,
-button:hover {
-    color: #505051;
-    border-color: #505051;
-    outline: 0;
-    padding: 1.2rem 4.0rem
 }
 
 input[type="submit"]:hover,
@@ -1110,215 +779,6 @@ input[type="button"]:focus {
     padding: 1.2rem 4.0rem
 }
 
-.button.button-primary,
-button.button-primary {
-    color: #2A3A3F;
-    background-color: transparent;
-    border: 2px solid #FDCD3B
-}
-
-.button.button-primary:hover,
-.button.button-primary:focus,
-button.button-primary:hover,
-button.button-primary:focus {
-    color: #FDCD3B;
-    background-color: #2A3A3F;
-    border: 2px solid #2A3A3F
-}
-
-input[type="submit"].button-primary,
-input[type="reset"].button-primary,
-input[type="button"].button-primary {
-    color: #2A3A3F;
-    background-color: #FDCD3B;
-    border: 0
-}
-
-input[type="submit"].button-primary:hover,
-input[type="submit"].button-primary:focus,
-input[type="reset"].button-primary:hover,
-input[type="reset"].button-primary:focus,
-input[type="button"].button-primary:hover,
-input[type="button"].button-primary:focus {
-    color: #FDCD3B;
-    background-color: #2A3A3F
-}
-
-.button-ghost,
-input.button-ghost {
-    color: #fff;
-    border: 2px solid #FDCD3B;
-    margin: 2.4rem 0 0;
-    background-color: transparent;
-    padding: 1.4rem 3.2rem;
-    font-size: 1.4rem
-}
-
-.button-ghost:hover,
-input.button-ghost:hover {
-    color: #2A3A3F;
-    background-color: #FDCD3B;
-    border: 2px solid #fff;
-    padding: 1.4rem 4.2rem
-}
-
-body.overflow-hidden {
-    overflow: hidden
-}
-
-.cd-modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-    transition: visibility 0s 0.3s, opacity 0.3s 0s, z-index 0s 0.3s
-}
-
-.cd-modal::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    pointer-events: none;
-    background: transparent
-}
-
-.cd-modal .cd-modal-content {
-    height: 100%;
-    width: 100%;
-    overflow-y: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
-}
-
-.cd-modal .cd-modal-content .contact-header {
-    padding: 50px 0 40px
-}
-
-.cd-modal .cd-modal-content a.logo {
-    background-image: url(../images/logomark.svg);
-    background-size: 100%;
-    display: inline-block;
-    width: 60px;
-    height: 60px;
-    text-indent: -99999px;
-    opacity: 1;
-    margin: 0 auto;
-    text-align: center;
-    border: 0
-}
-
-.cd-modal .cd-modal-content p.intro {
-    margin-top: 0
-}
-
-.cd-modal .cd-modal-content p.statement {
-    margin-bottom: 0;
-    font-size: 1.4rem;
-    color: rgba(255, 255, 255, 0.7)
-}
-
-.cd-modal .cd-modal-content .form-container {
-    margin: 0 auto;
-    padding: 44px 0 40px 0;
-    width: 95%
-}
-
-.cd-modal .cd-modal-content .form-container form input[type=text],
-.cd-modal .cd-modal-content .form-container form input[type=email] {
-    margin-bottom: 32px;
-    font-size: 1.3rem;
-    background-color: transparent;
-    border: 2px solid #fff;
-    color: #fff
-}
-
-.cd-modal .cd-modal-content .form-container form textarea {
-    font-size: 1.3rem;
-    min-height: 176px;
-    background-color: transparent;
-    border: 2px solid #fff;
-    color: #fff
-}
-
-.cd-modal .cd-modal-content .form-container form input[type=submit] {
-    border: 2px solid #FDCD3B;
-    background: transparent;
-    color: #fff;
-    margin-top: 30px
-}
-
-.cd-modal .cd-modal-content .form-container form input[type=submit]:hover {
-    background-color: #FDCD3B;
-    border: 2px solid #FDCD3B;
-    color: #2A3A3F
-}
-
-@media screen and (min-width: 750px) {
-    .cd-modal .cd-modal-content a.logo {
-        width: 70px;
-        height: 70px
-    }
-}
-
-@media (min-width: 750px) {
-    .cd-modal .cd-modal-content p.statement {
-        font-size: 1.75rem
-    }
-}
-
-@media (min-width: 750px) {
-    .cd-modal .cd-modal-content .form-container {
-        width: 80%
-    }
-}
-
-@media (min-width: 1000px) {
-    .cd-modal .cd-modal-content .form-container {
-        margin: 0 auto;
-        padding: 50px 0;
-        width: 50%
-    }
-}
-
-
-@media screen and (min-width: 550px) {
-    .cd-modal-action .btn {
-        font-size: 1.4rem;
-        line-height: 5.0rem
-    }
-}
-
-
-@media only screen and (min-width: 768px) {
-    .cd-modal-close {
-        top: 50px
-    }
-}
-
-#success-bg,
-#error-bg {
-    height: 100vh;
-    position: relative;
-    text-align: center;
-    width: 100%;
-    min-height: 350px;
-    background-color: #eee
-}
-
-.success-container,
-.error-container {
-    display: table;
-    margin: 0 auto;
-    padding: 0 40px;
-    height: 100%
-}
 .input-name {
     width: 70%;
     float: right;
@@ -1394,81 +854,32 @@ body.overflow-hidden {
         margin-top: 40px;
     }
 }
-.success-content,
-.error-content {
-    display: table-cell;
-    position: relative;
-    z-index: 10;
-    text-align: center;
-    vertical-align: middle
-}
 
-.success-content i.fa,
-.error-content i.fa {
-    font-size: 3.6rem;
-    margin: 0 0 20px
-}
-
-.success-content i.fa.fa-check-circle,
-.error-content i.fa.fa-check-circle {
-    color: #41c97f
-}
-
-.success-content i.fa.fa-frown-o,
-.error-content i.fa.fa-frown-o {
-    color: #e00007
-}
-
-@media screen and (min-width: 750px) {
-    .success-content i.fa,
-    .error-content i.fa {
-        font-size: 4.8rem
-    }
-}
-
-@media screen and (min-width: 1000px) {
-    .success-content i.fa,
-    .error-content i.fa {
-        font-size: 7.2rem
-    }
-}
-
-.success-content h1,
-.error-content h1 {
-    font-size: 2.6rem
-}
-
-@media screen and (min-width: 750px) {
-    .success-content h1,
-    .error-content h1 {
-        font-size: 3.6rem
-    }
-}
-
-@media screen and (min-width: 1000px) {
-    .success-content h1,
-    .error-content h1 {
-        font-size: 6.0rem
-    }
-}
-
-.success-content a.button,
-.error-content a.button {
-    margin: 10px 0 0
-}
-
-@media screen and (min-width: 750px) {
-    .success-content a.button,
-    .error-content a.button {
-        margin: 30px 0 0
-    }
-}
 .send-message {
     margin-top: 40px;
     margin-bottom: 60px;
     border: 0px;
     background-color: #FDCD3B;
     color: #000;
+}
+.startup-brand:hover img{
+  -webkit-transform: scale(1.07);
+  -ms-transform: scale(1.07);
+  transform: scale(1.07);
+}
+.startup-brand img{
+    -webkit-transition: all 0.3s ease;;
+    -moz-transition: all 0.3s ease;;
+    -o-transition: all 0.3s ease;;
+    transition: all 0.3s ease;
+}
+.wallpaper-dark {
+    background: #000000;
+    width: 100%;
+    height: 100vh;
+    opacity: 0.4;
+    position: absolute;
+    top: 0px;
 }
 
 /*# sourceMappingURL=main.css.map */
