--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -1,3 +1,164 @@
 @import "vars"
 
 
+@media (min-width: 400px)
+  .container
+    width: 85%
+    padding: 0
+
+@media (min-width: 550px)
+  .container
+    width: 80%
+  .column, .columns
+    margin-left: 4%
+  .column:first-child, .columns:first-child
+    margin-left: 0
+  .one
+    &.column, &.columns
+      width: 4.66667%
+  .two.columns
+    width: 13.33333%
+  .three.columns
+    width: 22%
+  .four.columns
+    width: 30.66667%
+  .five.columns
+    width: 39.33333%
+  .six.columns
+    width: 48%
+  .seven.columns
+    width: 56.66667%
+  .eight.columns
+    width: 65.33333%
+  .nine.columns
+    width: 74%
+  .ten.columns
+    width: 82.66667%
+  .eleven.columns
+    width: 91.33333%
+  .twelve.columns
+    width: 100%
+    margin-left: 0
+  .one-third.column
+    width: 30.66667%
+  .two-thirds.column
+    width: 65.33333%
+  .one-half.column
+    width: 48%
+  .offset-by-one
+    &.column, &.columns
+      margin-left: 8.66667%
+  .offset-by-two
+    &.column, &.columns
+      margin-left: 17.33333%
+  .offset-by-three
+    &.column, &.columns
+      margin-left: 26%
+  .offset-by-four
+    &.column, &.columns
+      margin-left: 34.66667%
+  .offset-by-five
+    &.column, &.columns
+      margin-left: 43.33333%
+  .offset-by-six
+    &.column, &.columns
+      margin-left: 52%
+  .offset-by-seven
+    &.column, &.columns
+      margin-left: 60.66667%
+  .offset-by-eight
+    &.column, &.columns
+      margin-left: 69.33333%
+  .offset-by-nine
+    &.column, &.columns
+      margin-left: 78%
+  .offset-by-ten
+    &.column, &.columns
+      margin-left: 86.66667%
+  .offset-by-eleven
+    &.column, &.columns
+      margin-left: 95.33333%
+  .offset-by-one-third
+    &.column, &.columns
+      margin-left: 34.66667%
+  .offset-by-two-thirds
+    &.column, &.columns
+      margin-left: 69.33333%
+  .offset-by-one-half
+    &.column, &.columns
+      margin-left: 52%
+@media screen and (min-width: 550px)
+  body
+    font-size: 1.4rem
+@media screen and (min-width: 750px)
+  p.intro
+    font-size: 3.2rem
+    margin: 7rem 0 2rem
+
+@media screen and (min-width: 750px)
+  p.statement
+    font-size: 2rem
+@media screen and (min-width: 550px)
+  section
+    padding: 0 0 65px
+
+@media screen and (min-width: 750px)
+  section
+    padding: 0 0 80px
+
+@media screen and (min-width: 1000px)
+  section
+    padding: 0 0 100px
+@media screen and (min-width: 750px)
+  footer a.logo
+    width: 40px
+    height: 40px
+@media screen and (min-width: 550px)
+  .home-hero
+    background-image: url(../img/hero-bg.jpg)
+
+@media screen and (min-width: 550px)
+  .hero-container
+    padding: 0 40px
+@media screen and (min-width: 750px)
+  .hero-content h1
+    font-size: 3.4rem
+
+@media screen and (min-width: 1000px)
+  .hero-content h1
+    font-size: 5.7rem
+
+@media screen and (min-width: 550px)
+  .hero-content a.button-ghost
+    margin: 6.0rem 0 0
+    padding: 1.4rem 3.2rem
+    font-size: 1.4rem
+    border: 2px solid #FDCD3B
+    &:hover
+      padding: 1.4rem 4rem
+@media screen and (min-width: 750px)
+  .learn-more
+    font-size: 1.7rem
+@media screen and (min-width: 750px)
+  .home-logo img
+    width: 48px
+
+@media screen and (min-width: 1000px)
+  .home-logo img
+    width: 60px
+@media screen and (min-width: 750px)
+  #me .expertise-block
+    margin: 4rem 0 0
+
+@media screen and (min-width: 750px)
+  #wip a.startup-brand img
+    margin: 4rem 0 1rem
+
+@media screen and (max-width: 750px)
+  .input-name, .input-email, .input-theme
+    width: 95%
+    float: left
+  .desire
+    width: 95%
+    float: left
+    margin-top: 40px
