--- a/app/portfolio/app/sass/main.sass
+++ b/app/portfolio/app/sass/main.sass
@@ -274,7 +274,7 @@ body .more-information .more-information__text
 	text-align: center
 	position: relative
 .wrapper-screen__change-point
-	position: absolute
+	margin-top: 120px
 	bottom: 70px
 .wrapper-screen__two-text
 	color: #f3f6fc
@@ -1137,4 +1137,6 @@ label.error
 	background-color: #e9a227
 .grafic-block-active .grafic-block__text
 	color: #e9a227
+.eng-two-button
+	margin-left: 60px
 @import "media" // Always at the end
