--- a/Beeline/app/sass/main.sass
+++ b/Beeline/app/sass/main.sass
@@ -38,6 +38,108 @@ body
 b, strong
 	font-weight: bold
 
+//footer
+.footer-beeline-logo
+	width: 45px
+	height: 42px
+.footer-top
+	width: 100%
+	background-color: #4d4d4d
 
+.footer-name-logo
+	color: #ffffff
+	font-size: 19px
+	margin-left: 6px
+.footer-logo
+	margin-top: -6px
+.logo-sign
+	color: #ffffff
+	font-size: 6px
+.footer-top-line
+	padding-top: 39px	
+	margin-bottom: 11px
+.footer_middle-line
+	margin-bottom: -3px
+.footer-top-line .url-footer
+	font-size: 13px
+	padding: 0px
+.url-footer-left
+	margin-left: 36px
+.url-footer-right
+	margin-left: -53px
+.url-footer
+	color: #9f9fa9
+.list-footer 
+	list-style-type: none
+	padding: 0
+.block-url-footer
+	padding: 0px
+.name-bottom-footer
+	color: #deedff
+	font-size: 13px
+	margin-left: 18%
+	margin-right: auto
+.name-middle-footer
+	color: #9f9fa9
+	font-size: 13px
+.footer-bottom-line
+	margin-top: 33px
+	padding: 0px
+.footer-bottom-line .url-footer 
+	font-size: 12px
+	margin-left: 18%
+	margin-right: auto
+.footer-bottom-line ul
+	line-height: 1.05
+.footer-location-map
+	font-size: 12px
+	margin-left: 12px
+	color: #dbf8fe
+.footer-map
+	margin-top: -13px
+.icon-footer-bottom
+	font-size: 17px
+	margin-right: 18px
+	margin-top: 43px
+	margin-left: 14px
+	margin-bottom: 59px
+	padding-bottom: 12px
+	color: #fff
+.footer-bottom
+	background-color: #313131
+.footer
+  position: fixed
+  bottom: 0
+  width: 100%
+  left: 0
+.list-footer-bottom-line
+	margin-bottom: 14px
+.list-footer-one
+	margin-left: 14px
+.list-footer-two
+	margin-left: -35px
+.list-footer-three
+	margin-left: -84px
+.icon-footer-vk
+	margin-left: 5px
+.icon-footer-youtube
+	margin-left: 6px
+.icon-footer-ok
+	margin-left: 10px
+.icon-footer-telegram
+	font-size: 21px
+	margin-left: 10px
+.icon-footer-skype
+	margin-left: 4px
+	font-size: 21px
+.footer_icon-download
+	margin-top: 33px
+	margin-left: -49px
+.footer_icon-download-logo
+	margin-right: 9px
+	width: 96px
+	height: 28px
+.footer__fotter-bottom-one
+	margin-top: -4px
 
 @import "media" // Always at the end
