--- a/Beeline/app/sass/_media.sass
+++ b/Beeline/app/sass/_media.sass
@@ -8,13 +8,38 @@
 
 // ≥992px
 +media-breakpoint-down(md)
-
+	.url-footer-left
+		margin-left: -17px
+	.footer-location-map
+		float: left
+		font-size: 11px
+		margin-left: -16px
+	.icon-footer-bottom
+		margin-right: 4px
 // ≥768px
 +media-breakpoint-down(sm)
-
+	.footer-bottom-line
+		display: none
+	.footer-bottom
+		display: none
+	.url-footer-right
+		margin-left: 17px
+	.url-footer-left
+		margin-left: 17px
+	.name-middle-footer-none
+		display: none
 // ≥576px
 +media-breakpoint-down(xs)
-
+	.footer-bottom-line
+		display: none
+	.footer-bottom
+		display: none
+	.url-footer-right
+		margin-left: 17px
+	.url-footer-left
+		margin-left: 17px
+	.name-middle-footer-none
+		display: none
 
 /*==========  Mobile First  ==========*/
 
@@ -26,6 +51,7 @@
 
 // ≤992px
 +media-breakpoint-up(lg)
+
 
 // ≤1200px
 +media-breakpoint-up(xl)
