i tvoy rot ebal

--- a/Beeline/app/sass/_media.sass
+++ b/Beeline/app/sass/_media.sass
@@ -14,7 +14,14 @@
 
 // ≥576px
 +media-breakpoint-down(xs)
-
+	.header-information__punction
+		padding: 10px 6px
+	.logo
+		margin-top: 29px
+	.line-menu__list-menu li
+		width: 100%
+	.right-forum-text__create-theme
+		display: none
 
 /*==========  Mobile First  ==========*/
 
