--- a/beeline/app/sass/_media.sass
+++ b/beeline/app/sass/_media.sass
@@ -27,6 +27,9 @@
 		margin-top: 16px
 	.statist-review-fix
 		margin-top: 114px
+	.block-search-two-page
+		margin-top: 6px
+		width: auto
 // ≥768px
 +media-breakpoint-down(sm)
 	.footer-bottom-line
@@ -141,6 +144,16 @@
 			width: 450px
 	.see-more
 		display: block
+	.theme-create-people-time
+		display: none
+	.theme-create-people
+		margin-top: 0px
+	.theme-create-people-past
+		margin-top: -14px
+	.profile-order-history-participant
+		margin-right: 5px
+	.block-search-two-page
+		display: none
 /*==========  Mobile First  ==========*/
 
 // ≤576px
