--- a/beeline/app/sass/main.sass
+++ b/beeline/app/sass/main.sass
@@ -771,5 +771,127 @@ b, strong
 	float: left
 	margin-right: 9px
 	margin-bottom: 5px
+//two-page
+.profile-people__avatar
+	width: 99px
+	height: 99px
+	border-radius: 47px
+	background-color: #e9a6c7
+	float: left
+	margin-top: 3px
+	margin-left: 21px
+.profile-people__info
+	margin-top: 21px
+	font-weight: bold
+.profile-people__name
+	float: left
+	margin-left: 17px
+	font-size: 16px
+.profile-people__name-line-img
+	margin-left: 16px
+	margin-top: 8px
+	float: left
+	margin-right: 27px
+.profile-people__name-order
+	margin-left: 9px
+.profile-people__name-line-new
+	font-size: 14px
+	color: #b9cae6
+	font-weight: lighter
+.profile-people
+	margin-bottom: 77px
 
+.profile-category-theme
+	display: inline-block
+	margin-top: 22px
+	font-size: 14px
+	margin-right: 18px
+	margin-bottom: 25px
+.profile-category
+	border: 1px solid #e1e1e1
+	margin-bottom: 30px
+	text-align: center
+.profile-order-headline
+	font-weight: bold
+	font-size: 16px
+.profile-order-info-people
+	text-align: center
+	width: 100%
+	height: 36px
+	background-color: #f2f2f2
+	margin: 7px auto
+	padding-top: 6px
+	font-size: 14px
+.profile-order-info
+	margin-top: 51px
+	font-weight: bold
+.profile-order-history-participant
+	float: left
+	margin-right: 155px
+	font-size: 14px
+.profile-order
+	padding-left: 21px
+	padding-right: 21px
+	margin-bottom: 28px
+.profile-order-history-date
+	font-weight: bold
+	font-size: 14px
+
+.theme-create-people
+	margin-top: -54px
+	padding-left: 27px
+	padding-top: 16px
+.theme-create-people-headline
+	border-bottom-color: #fad103
+	border-bottom-width: 2px
+	border-bottom-style: solid
+	width: 72px
+	padding-bottom: 4px
+.theme-create-people-avatar
+	width: 50px
+	height: 50px
+	border-radius: 25px
+	background-color: #e9a6c7
+	float: left
+	margin-top: 4px
+	margin-right: 17px
+.theme-create-people-title
+	margin-top: 21px
+	font-size: 14px
+.theme-create-people-text
+	font-size: 16px
+	font-weight: lighter
+.theme-create-people-time
+	float: right
+	margin-top: -47px
+	margin-right: 35px
+	font-size: 14px
+.theme-create-people-one
+	margin-bottom: 36px
+.theme-create-people-two
+	margin-bottom: 20px
+	margin-bottom: 18px
+	border-top: 1px #e0e0e0
+	margin-bottom: 20px
+	padding-left: 28px
+.theme-create-people-past
+	margin-top: -87px
+.theme-create-people-two .theme-create-people-avatar
+	margin-top: 3px
+.theme-create-people-two .theme-create-people-title
+	margin-top: 12px
+.profile-people__avatar
+	background-image: url('../img/people-1.jpg')
+	background-size: cover
+.theme-create-people-avatar
+	background-image: url('../img/people-1.jpg')
+	background-size: cover
+.choice-category__two-page
+	font-size: 14px
+.block-search-two-page
+	margin-top: 5px
+	border: 1px solid #e2e2e2
+.forum-line-two-page
+	text-align: center
+	background-color: #fff
 @import "media" // Always at the end
